--- a/style.css
+++ b/style.css
@@ -5,6 +5,20 @@
 }
 
 
+body{
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  min-width: 450px;
+  max-width: 700px;
+}
+
+hr{
+  border-radius: 10px;
+  align-items: normal;
+  margin: 0px;
+}
+
 h1{
   font-weight: 500;
 }
